zy: Fixed slideshow controls overlapping submenus.

--- a/css/base.css
+++ b/css/base.css
@@ -92,7 +92,7 @@ ul.sf-menu li li li:hover ul, ul.sf-menu li li li.sfHover ul  { left: 11em; top:
 
 /* Featured Slideshow */
 .featured  { margin: 0 10px 20px 0; overflow: hidden; }
-#controls  { position: relative; float: left; z-index: 100; top: 90px; }
+#controls  { position: relative; float: left; z-index: 90; top: 90px; }
 
 #controls .next, #controls .prev  { text-indent: -9000px; width: 30px; height: 30px; display: block; z-index: 1000; opacity: 0.7; }
 #controls .prev  { background: url(../images/prev.png) no-repeat; float: left; position: absolute; left: 10px; }
